added some changes

--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
       <div class="step slide slide18 pic-left" data-x="-8000" data-y="0" data-z="-5000" data-rotate-y="270" data-rotate-z="" data-rotate-x="0">
         <img src="assets/img/foundation.jpg" alt="" class="pic"/>
         <div class="title">DomoBits</div>
-        <p class="ready1">Frosty helped push the project, when the leadership waivered</p>
+        <p class="ready1">Frosty helped push the DomoBits project</p>
         <p class="ready2">Challenged the DomoApps team to get on board</p>
         <p class="ready3">Created unity between the two teams</p>
         <p class="ready4">Continues to push the effort</p>
@@ -158,7 +158,7 @@
       </div>
 
       <div class="step slide slide21 pic-right" data-x="-7800" data-y="1000" data-z="-5000" data-rotate-y="90" data-rotate-z="" data-rotate-x="0">
-        <img src="assets/img/pill.jpg" alt="" class="pic"/>
+        <img src="assets/img/perf.jpg" alt="" class="pic"/>
         <div class="title">Performance</div>
         <p class="ready1">Per Tim Ehat...</p>
         <p class="ready2">Frosty is the #1 participator in the performance efforts at Domo</p>
@@ -189,7 +189,7 @@
         <p class="ready3">16 hour days</p>
         <p class="ready4">7 days a week</p>
       </div>
-      <div class="step slide slide25 pic-right" data-x="-7300" data-y="600" data-z="-5000" data-rotate-y="0" data-rotate-z="" data-rotate-x="270">
+      <div class="step slide slide25 pic-right" delay="8000" data-x="-7300" data-y="600" data-z="-5000" data-rotate-y="0" data-rotate-z="" data-rotate-x="270">
         <img src="assets/img/onboard.jpg" alt="" class="pic"/>
         <div class="title">onboarding</div>
         <p class="ready1">Frosty worked w/ Peanav a bit to improve the onboarding process for new engineers</p>
@@ -197,7 +197,7 @@
         <p class="ready3"></p>
         <p class="ready4"></p>
       </div>
-      <div class="step slide slide26 pic-left" data-x="-7300" data-y="1400" data-z="-5000" data-rotate-y="0" data-rotate-z="180" data-rotate-x="90">
+      <div class="step slide slide26 pic-left" delay="8000" data-x="-7300" data-y="1400" data-z="-5000" data-rotate-y="0" data-rotate-z="180" data-rotate-x="90">
         <img src="assets/img/mentor.jpg" alt="" class="pic"/>
         <div class="title">mentor</div>
         <p class="ready1">Frosty helped mentor Tyler Whited, Bobby Carp, and Ricky Roller</p>
@@ -206,7 +206,7 @@
         <p class="ready4"></p>
       </div>
 
-      <div class="step slide slide27 pic-right" data-x="-7800" data-y="0" data-z="-5000" data-rotate-y="90" data-rotate-z="" data-rotate-x="0">
+      <div class="step slide slide27 pic-right" delay="8000" data-x="-7800" data-y="0" data-z="-5000" data-rotate-y="90" data-rotate-z="" data-rotate-x="0">
         <img src="assets/img/intervie.jpg" alt="" class="pic"/>
         <div class="title">interviewing</div>
         <p class="ready1">Frosty has helped interview potential hires</p>
@@ -214,7 +214,7 @@
         <p class="ready3"></p>
         <p class="ready4"></p>
       </div>
-      <div class="step slide slide28 pic-left" data-x="-7300" data-y="0" data-z="-5500" data-rotate-y="0" data-rotate-z="" data-rotate-x="0">
+      <div class="step slide slide28 pic-left" delay="8000" data-x="-7300" data-y="0" data-z="-5500" data-rotate-y="0" data-rotate-z="" data-rotate-x="0">
         <img src="assets/img/friend.jpg" alt="" class="pic"/>
         <div class="title">friendship</div>
         <p class="ready1">Frosty has befriended everyone at Domo</p>
@@ -222,7 +222,7 @@
         <p class="ready3"></p>
         <p class="ready4"></p>
       </div>
-      <div class="step slide slide29 pic-right" data-x="-7300" data-y="0" data-z="-4500" data-rotate-y="180" data-rotate-z="" data-rotate-x="0">
+      <div class="step slide slide29 pic-right" delay="8000" data-x="-7300" data-y="0" data-z="-4500" data-rotate-y="180" data-rotate-z="" data-rotate-x="0">
         <img src="assets/img/late.jpg" alt="" class="pic"/>
         <div class="title">after hours</div>
         <p class="ready1">Frosty worked after hours to help keep DomoWebs framework up to snuff</p>
@@ -317,8 +317,9 @@
       <!--</div>-->
 
       <!-- THE END -->
-      <div id="stadium" class="step" data-x="-4900" data-y="-1000" data-z="-10000" data-rotate-y="180" data-rotate-z="-15" data-rotate-x="-15">
-        THANK YOU
+      <div id="stadium" class="step" data-x="-7900" data-y="-1000" data-z="-10000" data-rotate-y="180" data-rotate-z="-15" data-rotate-x="-15">
+        <p class="ready1">Please consider this change</p>
+        <p class="ready2">Thanks for watching!!!</p>
       </div>
 
 
