--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
           href="http://www.nthsweb.net/castinom/labs/css_project/images/favicon.png">
   </head>
   <body>
-    <audio style="visibility: hidden;" id="song" src="assets/music/holydiver.mp3" preload="auto" controls></audio>
+    <audio style="visibility: hidden;" id="song" src="assets/music/holydiverlonger.mp3" preload="auto" controls></audio>
     <img id="windypic" src="assets/img/windy.gif" alt=""/>
 
     <div id="impress">
@@ -43,6 +43,18 @@
         <p class="ready22">of <span class="mainletter">O</span>pen <span class="mainletter">W</span>eb <span class="mainletter">A</span>rchitect</p>
         <p class="ready23">and cast it back</p>
         <p class="ready24">from whence it <span class="mainletter">C</span>ame</p>
+
+        <p class="ready31"><span class="mainletter">H</span>is weapon of choice</p>
+        <p class="ready32">is his code</p>
+        <p class="ready33">a code of <span class="mainletter">h</span>onor</p>
+        <p class="ready34">and of <span class="mainletter">J</span>ava<span class="mainletter">S</span>cript</p>
+        <p class="ready35"><span class="mainletter">!!!!</span></p>
+
+        <p class="ready41"><span class="mainletter">B</span>ehold our Champion</p>
+        <p class="ready42">Be entertained by him</p>
+        <p class="ready43">The following is a Chronicling</p>
+        <p class="ready44">Of his most awesome works</p>
+        <!--<p class="ready45"><span class="mainletter">!!!!</span></p>-->
       </div>
 
       <!--<div class="step slide slide1 pic-left" data-x="-3000" data-y="0" data-z="-3000" data-rotate-y="90">-->
