--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
           href="http://www.nthsweb.net/castinom/labs/css_project/images/favicon.png">
   </head>
   <body>
-    <audio style="visibility: hidden;" id="song" src="assets/music/holydiverlonger.mp3" preload="auto" controls></audio>
+    <audio style="visibility: hidden;" id="song" src="assets/music/holydiverlong2.mp3" preload="auto" controls></audio>
     <img id="windypic" src="assets/img/windy.gif" alt=""/>
 
     <div id="impress">
@@ -29,7 +29,7 @@
         <p class="ready3">When you are ready to find out why...</p>
         <p class="ready4">Volume Up, Click "Begin"</p>
         <p class="ready5">
-          <a href="#/totes"><button id="begin">Begin</button></a>
+          <a id="gotoTotes" href="#/totes"><button id="begin">Begin</button></a>
         </p>
       </div>
 
